Don't fix width on mobile

--- a/src/templates/blog.scss
+++ b/src/templates/blog.scss
@@ -5,6 +5,12 @@
     text-align: left;
 }
 
+@media screen and (orientation:portrait) {
+    .blog-post-content {
+        max-width: 100%;
+    }
+}
+
 .blog-post-content img {
     max-width: 100%;
 }
